--- a/client/lib/semantic-ui/themes/default/elements/icon.overrides.import.less
+++ b/client/lib/semantic-ui/themes/default/elements/icon.overrides.import.less
@@ -238,7 +238,7 @@ i.icon.ellipsis.vertical:before { content: "\f142"; }
 i.icon.cube:before { content: "\f1b2"; }
 i.icon.cubes:before { content: "\f1b3"; }
 i.icon.circle.notched:before { content: "\f1ce"; }
-i.icon.circle.thin:before { content: "\f1db"; }
+i.icon.circle.thin:before { content: "\f111"; }
 i.icon.square.outline:before { content: "\f096"; }
 i.icon.square:before { content: "\f0c8"; }
 
