--- a/client/lib/semantic-ui/themes/default/elements/icon.overrides.import.less
+++ b/client/lib/semantic-ui/themes/default/elements/icon.overrides.import.less
@@ -238,7 +238,7 @@ i.icon.ellipsis.vertical:before { content: "\f142"; }
 i.icon.cube:before { content: "\f1b2"; }
 i.icon.cubes:before { content: "\f1b3"; }
 i.icon.circle.notched:before { content: "\f1ce"; }
-i.icon.circle.thin:before { content: "\f111"; }
+i.icon.circle.thin:before { content: "\f111"; font-weight: 400; }
 i.icon.square.outline:before { content: "\f096"; }
 i.icon.square:before { content: "\f0c8"; }
 
@@ -371,7 +371,7 @@ i.icon.server:before { content: "\f233"; }
 /* Rating */
 i.icon.heart:before { content: "\f004"; }
 i.icon.star:before { content: "\f005"; }
-i.icon.empty.star:before { content: "\f006"; }
+i.icon.empty.star:before { content: "\f005"; font-weight: 400; }
 i.icon.thumbs.outline.up:before { content: "\f087"; }
 i.icon.thumbs.outline.down:before { content: "\f088"; }
 i.icon.star.half:before { content: "\f089"; }
