--- a/client/stylesheets/scss/_branding.scss
+++ b/client/stylesheets/scss/_branding.scss
@@ -8,19 +8,19 @@
 //------------------------------
 
 // Primary color of your brand (Used for primary buttons, glows, etc.)
-$brand-primary: #137DC3;
+$brand-primary: #8174E2;
 
 // Secondary color of your brand (used for secondary buttons)
-$brand-secondary: #FFBF0A;
+$brand-secondary: #DDC0FF;
 
 // Success Buttons
-$brand-success: rgb(46, 204, 113);
+$brand-success: rgb(120, 226, 116);
 
 // Danger/Negative Buttons
-$brand-danger: #FF490A;
+$brand-danger: #803232;
 
 // Black
-$black: #2d2d2d;
+$black: #231F20;
 
 // --------------
 // Colors used for social auth
