Revert "Update _branding.scss"
This reverts commit 578d2fc27f3c0733daeb5b5ba0e3e8b745dfccd7.

--- a/client/stylesheets/scss/_branding.scss
+++ b/client/stylesheets/scss/_branding.scss
@@ -8,19 +8,19 @@
 //------------------------------
 
 // Primary color of your brand (Used for primary buttons, glows, etc.)
-$brand-primary: #8174E2;
+$brand-primary: #137DC3;
 
 // Secondary color of your brand (used for secondary buttons)
-$brand-secondary: #DDC0FF;
+$brand-secondary: #FFBF0A;
 
 // Success Buttons
-$brand-success: rgb(120, 226, 116);
+$brand-success: rgb(46, 204, 113);
 
 // Danger/Negative Buttons
-$brand-danger: #803232;
+$brand-danger: #FF490A;
 
 // Black
-$black: #231F20;
+$black: #2d2d2d;
 
 // --------------
 // Colors used for social auth
